--- a/css/style.css
+++ b/css/style.css
@@ -17,12 +17,12 @@ h3{
     padding: 20px;
     margin-bottom: 10px;
     text-align: center;
+    text-transform: uppercase;
 
 
 }
 
 #container{
-
     background: #5D6D7E;
     width: 100%;
     height: 100vh;
@@ -35,8 +35,9 @@ h3{
     align-items: center;
 }
 #container form{
+ 
     background: #fff;
-    width: 700px;
+    width: 400px;
     padding: 10px;
 
 }
@@ -44,8 +45,36 @@ h3{
 #container form img{
 
     margin: auto;
+    margin-top: 30px;
     text-align: center;
     display: block;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 30px;
+}
+
+#container form input{
+
+    width: 90%;
+    padding: 5px;
+    font-size: 16pt;
+    display: block;
+    margin: 25px auto;
+    border-radius: 5px;
+    border: 1px solid #85929e;
+    text-align: center;
+}
+
+#container form input[type="submit"]{
+    background: #52be80;
+    padding: 10px;
+    color: #fff;
+    letter-spacing: 1px;
+    border: 0;
+    cursor: pointer;
+}
+.alert{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    text-align: center;
 }
